--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,6 +20,7 @@
     <param-value>
       /WEB-INF/spring-context.xml
       /WEB-INF/spring-security.xml
+      /WEB-INF/spring-database.xml
     </param-value>
   </init-param>
   <load-on-startup>1</load-on-startup>
