--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,7 +19,6 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
       /WEB-INF/spring-context.xml
-      /WEB-INF/spring-security.xml
       /WEB-INF/spring-database.xml
     </param-value>
   </init-param>
@@ -31,7 +30,7 @@
 </servlet-mapping>
 
 
-<!-- Spring Security filter -->
+<!-- Spring Security filter 
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -41,5 +40,5 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-  
+  -->
 </web-app>
